@@ -17,7 +17,7 @@
 # Inc., 51 Franklin Street - Fifth Floor, Boston, MA 02110-1301, USA.
 
 # This file requires a slightly modified dmucs, which has been
-# modified to support mutiple architectures for toolchain
+# modified to support multiple architectures for toolchain
 # testing. DMUCS sends the CPU load to a server, which we can query
 # using the 'gethost' command to get the next available slave for a
 # remote test based on which one is the least busy. The code for this
