@@ -1,5 +1,11 @@
 2016-03-30  Ben Elliston  <bje@gnu.org>
 
+	* baseboards/mcore-moto-sim.exp, lib/dejagnu.exp, lib/dg.exp,
+	lib/dmucs.exp, lib/framework.exp, lib/remote.exp, lib/target.exp,
+	runtest.exp: Fix spelling errors in comments.
+
+2016-03-30  Ben Elliston  <bje@gnu.org>
+
 	* lib/remote.exp (remote_expect): Use perror not send_user.
 
 2016-03-29  Ben Elliston  <bje@gnu.org>
